# ee695-complete

./: README.md
computer_vision/colour_segmentation/: aruco.py  detect-and-display.sh  detect-validate-display.sh  detect.py  detection_validation.py  display.py  mt-test.py  pyproject.toml  requirements.txt  test-preprocessing-steps.py  test_colour_segmentation.py  test_config_loading.py  test_state_validator.py  threshold-script.py  video_detection.py
computer_vision/yolo/: .c4sd_conf.json  augment-dataset.py  (+7 more)
gameplay_simulator/: CMakeLists.txt  README.md
gameplay_simulator/apps/: CMakeLists.txt  c4sim.cpp  c4sim_gui.cpp  test_routine.cpp
gameplay_simulator/apps/old/: interaction_demo.cpp  raylib_test.cpp
gameplay_simulator/cmake/: raylib.cmake
gameplay_simulator/include/c4sim/: game-old.h  game.h  main.h  player.h
gameplay_simulator/include/c4sim/players/: ab_minimax.h  mcts.h  random_choice.h  raylib_user.h  terminal_user.h
gameplay_simulator/src/: CMakeLists.txt  game.cpp  player.cpp
testing_data/: 20250501_154232.txt  20250501_155411.txt  20250501_160701.txt  20250501_161230.txt  20250505_151338.txt  colour_segmentation_noise_lim200.json  colour_segmentation_noise_lim3000.json  default_colour_segmentation.json  full_test_results_21_20250503-162925.json  full_test_results_21_20250503-164319.json  pick_test_results_40_20250503-140834.json  pick_test_results_40_20250503-142641.json  place_test_results_21_20250503-154454.json  place_test_results_21_20250503-160523.json  yolo_threshold0.3.json  yolo_threshold0.75.json  yolo_threshold0.9.json
(+82 files in other folders)
